--- a/organizacoes/templates/organizacoes/anotacao_view.html
+++ b/organizacoes/templates/organizacoes/anotacao_view.html
@@ -64,7 +64,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button id="atualiza" type="button" class="btn btn-primary mb-1" data-dismiss="modal">Atualizar</button>
+    <button id="atualiza" type="button" class="btn btn-primary" data-dismiss="modal">Atualizar</button>
   </div>
 
 </form>
