ajuste para setas funcionarem corretamente

--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -174,7 +174,7 @@
 
                       </a>
                       
-                      <i class="anteriores" style="float:right;"><span class="seta-cima"></span></i>
+                      <i class="anteriores" style="float:right;"><span class="seta seta-cima"></span></i>
                       <div id="relato{{item.id}}" style="display: none; background-color: #f9f9f2; padding: 5px;" class="relato">
                         {{proposta.descricao|linebreaks}}
                       </div>
