--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -23,7 +23,7 @@
         {% if not forloop.first %}</tbody>{% endif %}
         <thead><tr><th id="{{e.periodo.pt}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">
           {% lng e.periodo.pt e.periodo.en %}
-          {% if e.periodo.pt == "Anteriores" %}<span class="seta-baixo"></span>{% endif %}</th></tr></thead>
+          {% if e.periodo.pt == "Anteriores" %}<span class="seta seta-baixo"></span>{% endif %}</th></tr></thead>
         <tbody>
       {% endifchanged %}
 
