--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -22,7 +22,7 @@
         {% if not forloop.first %}</tbody>{% endif %}
         <thead><tr><th id="{{banca.periodo.pt}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">
           {% lng banca.periodo.pt banca.periodo.en %}
-           {% if banca.periodo.pt == "Anteriores" %}<span class="seta-baixo"></span>{% endif %}</th></tr></thead>
+           {% if banca.periodo.pt == "Anteriores" %}<span class="seta seta-baixo"></span>{% endif %}</th></tr></thead>
         <tbody>
       {% endifchanged %}
 
