--- a/professores/templates/professores/coorientacoes_alocadas.html
+++ b/professores/templates/professores/coorientacoes_alocadas.html
@@ -21,7 +21,7 @@
         {% if not forloop.first %}</tbody>{% endif %}
         <thead><tr><th id="{{coorientacao.projeto.periodo.pt}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">
           {% lng coorientacao.projeto.periodo.pt coorientacao.projeto.periodo.en %}
-          {% if coorientacao.projeto.periodo.pt == "Anteriores" %}<span class="seta-baixo"></span>{% endif %}</th></tr></thead>
+          {% if coorientacao.projeto.periodo.pt == "Anteriores" %}<span class="seta seta-baixo"></span>{% endif %}</th></tr></thead>
         <tbody>
       {% endifchanged %}
 
