--- a/professores/templates/professores/planos_de_orientacao_todos.html
+++ b/professores/templates/professores/planos_de_orientacao_todos.html
@@ -104,7 +104,7 @@
 
     <p>&nbsp;</p>
     
-    <b>{% lng "Número de Planos de Orientação:" "Number of Orientation Plans:" %}:</b>
+    <b>{% lng "Número de Planos de Orientação" "Number of Orientation Plans" %}:</b>
     {{projetos|length}}<br>
     {% lng "Submetidos" "Submitted" %}: <span id="submetidos"></span><br>
     {% lng "Ausentes" "Missing" %}: <span id="ausentes"></span><br>
